--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "reactjs-popup": "^1.3.1",
     "superstruct": "^0.6.0"
   },
   "scripts": {
